Rename to attestation and add GCP option.
